= CHANGES

== 0.14.0.rc2
- FIX #2109 change the format of session_id for Padrino Admin AccessControl
- WARN #2109 Existing sessions will be dropped
- FIX #2097 Use exe folder for application executables (@adam12)
- FIX #2105 Run bundle with --binstubs on -b switch (@adam12)
- FIX #2111 disallow conflicting project names
- NEW remove deprecations planned for 0.14.0

== 0.14.0.rc1 (2016-11-02)
- NEW remove the requirement of ActiveSupport (export AS_VERSION=X.0 to put it back)

== 0.13.3.3 (2016-11-02)
- FIX #2075 cache actual content_type mime type
- FIX #2081 remove -i option from pg_dump command (@dfens)
- FIX #2083 be able to create sqlite's file to deep tree of subdirectories (@kkarakawa)
- NEW dynamically list supported renderers (@jfredrickson)

== 0.13.3.2 (2016-09-06)
- FIX #2071 regression of #1906
- FIX running padrino without Gemfile
- NEW alias db:create for sequel adapter

== 0.13.3.1 (2016-08-30)
- NEW support usage of partials without view path

== 0.13.3 (August 17th 2016)

- FIX #1785 Nested forms and helpers with ERB and Erubis (@ujifgc)
- FIX #1847 Shoulda on modern rubies
- NEW #1851 Remove RightJS, Riot, Steak support (@ujifgc)
- FIX #1872 Implement using partials without Sinatra (@ujifgc)
- NEW #1906 Allow shortened mailer render calls with default mailer and message names (@ujifgc)
- FIX #2013 Delegate padrino and padrino-gen to bundler binstubs (@ujifgc)
- FIX #2016 Escape urls in link_to and form_tag (@ujifgc)
- FIX #2042 Do not override access control object when registered in multiple apps (@nxs6)
- FIX #2045 Prevent overwriting params by given query (@namusyaka)
- NEW #2050 Update Moneta to 0.8.0 (@basex)
- FIX #2052 String#humanize compatibility with AS ~3.2
- NEW #2056 Allow Pry as Padrino console shell
- FIX #2066 fix reloader with native jruby classes

== 0.13.2 (May 9th 2016)

- FIX #1789 Relax Tilt version to allow Tilt 2 (>= 1.4.1, < 3) (@ujifgc)
- WARN #1989 Warn about coming behavior change (@ujifgc)