@@ -112,8 +112,8 @@ module Padrino
     # @return [NilClass]
     #
     def set_encoding
-      Encoding.default_external = Encoding::UTF_8
-      Encoding.default_internal = Encoding::UTF_8
+      # remove after 0.15
+      warn 'Warning! Padrino.set_encoding is deprecated. Padrino no longer manages ruby default encodings'
       nil
     end
 
