@@ -7,6 +7,8 @@
 - FIX #2105 Run bundle with --binstubs on -b switch (@adam12)
 - FIX #2111 disallow conflicting project names
 - NEW remove deprecations planned for 0.14.0
+- NEW stop managing Ruby default encodings
+  Default Encoding.default_internal is now nil (Ruby default) instead of UTF-8 (Padrino < 0.14 default)
 
 == 0.14.0.rc1 (2016-11-02)
 - NEW remove the requirement of ActiveSupport (export AS_VERSION=X.0 to put it back)
